--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Smart AI Mental Wellness Chatbot</title>
+  <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
 
@@ -29,5 +30,7 @@
     </div>
 
   </div>
+    <script src="../static/script.js"></script>
+
 </body>
 </html>
